--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -536,8 +536,8 @@
             </div>
         </div>
         <div class="credit">
-            <p><i class="fas fa-phone"></i>03 21 13 64 30</p>
-            <p><i class="far fa-envelope"></i>contact@luxantinnovation.com</p>
+            <p><i class="fas fa-phone"></i><a href="tel:+33321136430">03 21 13 64 30</a></p>
+            <p><i class="far fa-envelope"></i><a href="mailto:contact@luxantinnovation.comr">contact@luxantinnovation.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i>24 rue de Beaumont - 62950 Noyelles-Godault</p>
         </div>
     </footer>
