--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -176,7 +176,7 @@
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
-                                <p>Transport</p>
+                                <p>Transports</p>
                             </div>
                             <div class="icon">
                                 <img src="./assets/vid/transport.gif" alt="">
