--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -73,10 +73,13 @@
             </div>
             <div class="mid">
                 <div class="hero">
-                    <svg width="457" height="457" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="357" height="357" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73" />
                     </svg>
-                    <img src="./assets/img/mila_header2.png" alt="">
+                    <!-- <img src="./assets/img/mila_header2.png" alt=""> -->
+                    <img src="./assets/vid/mila_hero_1.gif" alt="">
+                    <video loop autoplay muted src="./assets/vid/mila_hero.webm"></video>
+
                 </div>
             </div>
             <div class="right">
