--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -27,7 +27,8 @@
     <link rel="icon" href="./assets/img/favicon.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LeSKBMqAAAAAHMEHn_LL93ByuRv6VRSR56kvZj1"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6Lfu9hUqAAAAAM8ub0zA5iRiLRIRwU8U3PbH6Y1p
+"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -38,6 +39,7 @@
             color: #666;
             margin-top: 5px;
         }
+
         .maxLengthWarning {
             color: red;
         }
@@ -46,7 +48,7 @@
 
 <body>
     <div class="loader" id="loader">
-        <img src="./assets/vid/animation logo.gif" alt="loader">
+        <img src="./assets/vid/animation_logo.gif" alt="loader">
         <video src="./assets/vid/animation_logo.webm" autoplay loop muted></video>
     </div>
     <header id="home">
@@ -486,13 +488,22 @@
                 </svg>
             </div>
 
-            <div class="container" data-aos="zoom-in" data-aos-duration="1000">
+            <!-- <div class="container" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="vid">
                     <video controls id="myVideo" preload="metadata">
                         <source src="https://storage.luxant-service.fr/s/T72kLZ4AmSo2HBd/download" type="video/mp4">
                     </video>
                 </div>
-            </div>
+            </div> -->
+
+            <div class="container" data-aos="zoom-in" data-aos-duration="1000">
+                <div class="vid" id="videoContainer">
+                  <video controls id="myVideo" preload="metadata">
+                    <source src="https://storage.luxant-service.fr/s/T72kLZ4AmSo2HBd/download" type="video/mp4">
+                    Votre navigateur ne supporte pas la balise vidéo.
+                  </video>
+                </div>
+              </div>
         </div>
     </section>
 
@@ -515,10 +526,9 @@
                     <input type="email" class="form-control" name="mail" id="mail" placeholder="Mail" required>
                     <textarea name="message" class="form-control" id="message" placeholder="Message" maxlength="2000"
                         required></textarea>
-                        <div id="charCount">0 / 2000 caractères</div><br>
+                    <div id="charCount">0 / 2000 caractères</div><br>
                     <button type="submit" class="custom-submit">Envoyer<i class="fas fa-envelope"></i></button>
                 </form>
-                <div class="confirm" id="confirmationMessage" style="display: none; color:red;"></div>
             </div>
         </div>
     </section>
@@ -546,10 +556,10 @@
 
                 <form id="newsletterForm" action="./php/subscribe.php" method="post">
                     <input type="email" class="form-control" name="mail" id="mail" placeholder="Mail" required>
-                    <div class="checkbox-container">
+                    <!-- <div class="checkbox-container">
                             <input style="width: fit-content; margin: 0% 2%; text-align:right" type="checkbox" name="consent" id="consent" required>
                             <label for="consent" style="color:white;text-align:right">Je consens à recevoir la newsletter</label>
-                    </div>
+                    </div> -->
                     <button type="submit" class="custom-submit">Confirmer<i class="fas fa-envelope"></i></button>
                 </form>
 
@@ -565,21 +575,19 @@
         </div>
         <div class="credit">
             <p><i class="fas fa-phone"></i><a href="tel:+33321136430">03 21 13 64 30</a></p>
-            <p><i class="far fa-envelope"></i><a
-                    href="mailto:contact@luxantinnovation.comr">contact@luxantinnovation.com</a></p>
+            <p><i class="far fa-envelope"></i><a href="mailto:contact@mila-3d.ai">contact@mila-3d.ai</a></p>
             <p><i class="fas fa-map-marker-alt"></i>24 rue de Beaumont - 62950 Noyelles-Godault</p>
         </div>
     </footer>
     <script src="./js/script.js"></script>
     <script src="./js/scroll.js"></script>
-    <script src="./js/menuAOS.js"></script>
     <script src="./js/observer.js"></script>
     <script src="./js/loader.js"></script>
     <script src="./js/formHandling.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script>
+    <script>
         //Menu burger
         $(document).ready(function () {
             $('.burger').click(function () {
@@ -631,7 +639,35 @@
             updateAOSAnimations();
         });
 
-    </script> 
+        document.addEventListener("DOMContentLoaded", function() {
+  // Détection des appareils Android
+  var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+  var isAndroid = /android/i.test(userAgent);
+
+  var videoContainer = document.getElementById("videoContainer");
+  var videoElement = document.getElementById("myVideo");
+
+  // Si l'appareil est Android, ajoutez la classe pour masquer la miniature
+  if (isAndroid && videoContainer) {
+    videoContainer.classList.add("hide-overlay");
+  }
+
+  // Ajoutez un événement de clic pour lire la vidéo et cacher la miniature
+  videoElement.addEventListener("click", function() {
+    if (videoElement.paused) {
+      // Lire la vidéo et cacher la miniature
+      videoElement.play();
+      if (videoContainer) {
+        videoContainer.classList.add("hide-overlay");
+      }
+    } else {
+      // Mettre la vidéo en pause si elle est en lecture
+      videoElement.pause();
+    }
+  });
+});
+
+    </script>
 </body>
 
 </html>
