--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -48,8 +48,8 @@
 
 <body>
     <div class="loader" id="loader">
-        <img src="./assets/vid/animation_logo.gif" alt="loader">
-        <video src="./assets/vid/animation_logo.webm" autoplay loop muted></video>
+        <!-- <img src="./assets/vid/animation_logo.gif" alt="loader"> -->
+        <video src="./assets/vid/animation logo.mp4" autoplay loop muted></video>
     </div>
     <header id="home">
         <div class="nav">
@@ -88,12 +88,11 @@
             </div>
             <div class="mid">
                 <div class="hero">
-                    <svg width="357" height="357" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- <svg width="357" height="357" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73" />
-                    </svg>
-                    <img src="./assets/vid/mila_hero_3.gif" alt="">
-                    <video loop autoplay muted src="./assets/vid/mila_hero_3.webm"></video>
-
+                    </svg> -->
+                    <!-- <img src="./assets/vid/mila_hero_3.gif" alt=""> -->
+                    <video loop autoplay muted src="./assets/vid/hero_mila.mp4"></video>
                 </div>
             </div>
             <div class="right">
@@ -498,6 +497,7 @@
 
             <div class="container" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="vid" id="videoContainer">
+                  <img src="./assets/img/video.png" class="thumbnail" id="videoThumbnail" alt="Miniature">
                   <video controls id="myVideo" preload="metadata">
                     <source src="https://storage.luxant-service.fr/s/T72kLZ4AmSo2HBd/download" type="video/mp4">
                     Votre navigateur ne supporte pas la balise vidéo.
@@ -639,7 +639,25 @@
             updateAOSAnimations();
         });
 
+        document.addEventListener("DOMContentLoaded", function() {
+      var videoContainer = document.getElementById("videoContainer");
+      var videoElement = document.getElementById("myVideo");
+      var videoThumbnail = document.getElementById("videoThumbnail");
 
+      // Ajouter un événement de clic pour lire la vidéo et cacher la miniature
+      videoThumbnail.addEventListener("click", function() {
+        videoElement.play();
+        videoContainer.classList.add("hide-thumbnail");
+      });
+
+      // Détection des appareils Android
+    //   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    //   var isAndroid = /android/i.test(userAgent);
+
+    //   if (isAndroid && videoContainer) {
+    //     videoContainer.classList.add("hide-thumbnail");
+    //   }
+    });
     </script>
 </body>
 
