--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -48,7 +48,7 @@
 
 <body>
     <div class="loader" id="loader">
-        <!-- <img src="./assets/vid/animation_logo.gif" alt="loader"> -->
+        <img src="./assets/vid/animation_logo.gif" alt="loader">
         <video src="./assets/vid/animation logo.mp4" autoplay loop muted></video>
     </div>
     <header id="home">
@@ -88,10 +88,7 @@
             </div>
             <div class="mid">
                 <div class="hero">
-                    <!-- <svg width="357" height="357" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73" />
-                    </svg> -->
-                    <!-- <img src="./assets/vid/mila_hero_3.gif" alt=""> -->
+                    <img src="./assets/vid/mila_hero_3.gif" alt="">
                     <video loop autoplay muted src="./assets/vid/hero_mila.mp4"></video>
                 </div>
             </div>
@@ -487,14 +484,6 @@
                 </svg>
             </div>
 
-            <!-- <div class="container" data-aos="zoom-in" data-aos-duration="1000">
-                <div class="vid">
-                    <video controls id="myVideo" preload="metadata">
-                        <source src="https://storage.luxant-service.fr/s/T72kLZ4AmSo2HBd/download" type="video/mp4">
-                    </video>
-                </div>
-            </div> -->
-
             <div class="container" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="vid" id="videoContainer">
                   <img src="./assets/img/video.png" class="thumbnail" id="videoThumbnail" alt="Miniature">
@@ -556,10 +545,6 @@
 
                 <form id="newsletterForm" action="./php/subscribe.php" method="post">
                     <input type="email" class="form-control" name="mail" id="mail" placeholder="Mail" required>
-                    <!-- <div class="checkbox-container">
-                            <input style="width: fit-content; margin: 0% 2%; text-align:right" type="checkbox" name="consent" id="consent" required>
-                            <label for="consent" style="color:white;text-align:right">Je consens à recevoir la newsletter</label>
-                    </div> -->
                     <button type="submit" class="custom-submit">Confirmer<i class="fas fa-envelope"></i></button>
                 </form>
 
