--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="mid">
                 <div class="hero">
-                    <img src="./assets/vid/mila_hero_3.gif" alt="">
+                    <img src="./assets/vid/hero_mila_mobile.gif" alt="">
                     <video loop autoplay muted src="./assets/vid/hero_mila.mp4"></video>
                 </div>
             </div>
