--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -357,10 +357,11 @@
                         <p>Points de vente</p>
                     </div>
                     <div class="image">
-                        <video loop autoplay muted playsinline>
+                        <video loop autoplay muted src="./assets/vid/pdv.webm"></video>
+                        <!-- <video loop autoplay muted playsinline>
                             <source src="./assets/vid/pdv.webm" type="video/webm">
                             <img src="./assets/vid/pdv.gif" alt="mila points de vente">
-                        </video>
+                        </video> -->
                     </div>
                     <div class="desc">
                         <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
