--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -277,11 +277,8 @@
                             <div class="titre">
                                 <p>Points de vente</p>
                             </div>
-                            <!-- <div class="icon">
+                            <div class="icon">
                                 <img src="./assets/vid/pdv.gif" alt="">
-                            </div> -->
-                            <div class="icon" data-webm="./assets/vid/pdv.webm" data-gif="./assets/vid/pdv.gif">
-                                <!-- Le contenu sera ajouté ici dynamiquement via JavaScript -->
                             </div>
                         </div>
                     </div>
@@ -573,7 +570,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-
 
         //Menu burger
         $(document).ready(function () {
