--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -192,7 +192,7 @@
                                 <p>Transports</p>
                             </div>
                             <div class="icon">
-                                <img src="./assets/vid/transport.gif" alt="">
+                                <img src="./assets/vid/transport.gif" alt="" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             </div>
 
                             <div class="icon">
-                                <img src="./assets/vid/casino.gif" alt="">
+                                <img src="./assets/vid/casino.gif" alt="" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                                 <p>Musées</p>
                             </div>
                             <div class="icon">
-                                <img src="./assets/vid/musee.gif" alt="">
+                                <img src="./assets/vid/musee.gif" alt="" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                                 <p>Galeries Marchandes</p>
                             </div>
                             <div class="icon">
-                                <img src="./assets/vid/centres.gif" alt="">
+                                <img src="./assets/vid/centres.gif" alt="" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                                 <p>Points de vente</p>
                             </div>
                             <div class="icon">
-                                <img src="./assets/vid/pdv.gif" alt="">
+                                <img src="./assets/vid/pdv.gif" alt="" loading="lazy">
                             </div>
                         </div>
                     </div>
