--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -89,7 +89,7 @@
             <div class="mid">
                 <div class="hero">
                     <img src="./assets/vid/hero_mila_mobile.gif" alt="">
-                    <!-- <video loop autoplay muted src="./assets/vid/hero_mila.mp4"></video> -->
+                    <video loop autoplay muted src="./assets/vid/hero_mila.mp4"></video>
                 </div>
             </div>
             <div class="right">
